# Pet_Platforma_17

./: README.md  docker-compose.yml  main.py  master_models.py  pyproject.toml  sql_app.db
migrations/versions/: 0e13a27eeb33_init_2.py  2a0c39c2bc9d_init.py  a65230ab32a3_init_new_models.py  e56b97b0924d_init.py  ef145bad0bc2_init_new_models_2.py
src/conf/: config.py
src/database/: db.py  models.py  sql_app.db
src/repository/: address.py  admins.py  currency.py  masters.py  service_categories.py  services.py  subscribes.py  users.py  work_photos.py
src/routes/: admins.py  auth.py  cities.py  countries.py  currencies.py  currency.py  masters.py  service_categories.py  services.py  subscribes.py  users.py  work_photos.py
src/schemas/: address_schemas.py  currency_schemas.py  master_to_service_schemas.py  service_category_schemas.py  service_schemas.py  subscribe_schemas.py  user_schemas.py  work_photos.py
src/services/: email.py
src/services/admin_panel/: admin_panel.py  admin_panel_auth.py
src/utils/: migrations_to_database.py  ukraine.json
