[tool.poetry]
name = "pet-platforma-17"
version = "0.1.0"
description = ""
authors = ["MartynyukAndriy <Andriy.martynyuk.if@gmail.com>"]
readme = "README.md"
packages = [{include = "pet_platforma_17"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
