[tool.poetry]
name = "pet-platforma-17"
version = "0.1.0"
description = ""
authors = ["MartynyukAndriy <Andriy.martynyuk.if@gmail.com>"]
readme = "README.md"
packages = [{include = "pet_platforma_17"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
sqladmin = "^0.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
