[tool.poetry]
name = "pet-platforma-17"
version = "0.1.0"
description = ""
authors = ["MartynyukAndriy <Andriy.martynyuk.if@gmail.com>"]
readme = "README.md"
packages = [{include = "pet_platforma_17"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
pydantic = {extras = ["email"], version = "^2.3.0"}
sqladmin = "^0.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.12.0"
asyncpg = "^0.28.0"
fastapi-mail = "^1.4.1"
alembic = "^1.12.0"
pydantic = "^2.3.0"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
